DF-34226 | Fixed ISI menu overlapping

--- a/projects/veeva-clm/src/Components/05-pages/A.7.0_ISI/style.scss
+++ b/projects/veeva-clm/src/Components/05-pages/A.7.0_ISI/style.scss
@@ -9,6 +9,12 @@
     padding-bottom: 365px;
     padding-left: 2px;
 
+    .ScrollbarsCustom,
+    .ScrollbarsCustom-Wrapper,
+    .ScrollbarsCustom-Scroller {
+      z-index: 1;
+    }
+
     .ScrollbarsCustom {
 
       .ScrollbarsCustom-Scroller {
@@ -27,6 +33,14 @@
         .ScrollbarsCustom-Thumb {
           background: $blue-500 !important;
         }
+      }
+    }
+
+    .list.circle {
+      li:before {
+        left: -10px;
+        width: 4.5px;
+        height: 4.5px;
       }
     }
   }
